--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,6 @@
 MONGO_URI=mongodb+srv://maharanamessi:tlyKPOUuYxZZreqB@assetmgmt-cluster.7ywkjae.mongodb.net/
 PORT=5000
+ADMIN_EMAIL=admin@example.com
+ADMIN_PASSWORD=admin123
+
 
