--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb+srv://maharanamessi:tlyKPOUuYxZZreqB@assetmgmt-cluster.7ywkjae.mongodb.net/
+MONGO_URI=mongodb+srv://maharanamessi:tlyKPOUuYxZZreqB@assetmgmt-cluster.7ywkjae.mongodb.net/Asset-plus
 PORT=5000
 ADMIN_EMAIL=admin@example.com
 ADMIN_PASSWORD=admin123
