--- a/frontened/package.json
+++ b/frontened/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.11",
+    "axios": "^1.10.0",
     "framer-motion": "^12.23.0",
     "heroicons": "^2.2.0",
     "lucide-react": "^0.525.0",
@@ -19,6 +20,7 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.3",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
