--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,6 @@
 MONGO_URI=mongodb+srv://maharanamessi:tlyKPOUuYxZZreqB@assetmgmt-cluster.7ywkjae.mongodb.net/Asset-plus
 PORT=5000
+JWT_SECRET=your_super_secret_key
+JWT_EXPIRES_IN=1d
 
 
