--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.10.0",
+    "chart.js": "^4.5.0",
     "framer-motion": "^12.23.0",
     "heroicons": "^2.2.0",
     "lucide-react": "^0.525.0",
